--- a/NeteaseCloudMusicApi/NeteaseCloudMusicApi.csproj
+++ b/NeteaseCloudMusicApi/NeteaseCloudMusicApi.csproj
@@ -5,7 +5,7 @@
 		<Description>网易云音乐 API</Description>
 		<Copyright>Copyright © 2019-2021 Binaryify / Wwh</Copyright>
 		<Version>3.25.3.10000</Version>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<AssemblyOriginatorKeyFile>../NeteaseCloudMusicApi.snk</AssemblyOriginatorKeyFile>
 		<SignAssembly>true</SignAssembly>
@@ -22,6 +22,6 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+	  <PackageReference Include="System.Text.Json" Version="6.0.0" />
 	</ItemGroup>
 </Project>
